# Tactus-test-runner

./: .gitignore  README.md  poetry.toml  pyproject.toml  test_cases.toml
config_files/: atos_bologna.toml  atos_bologna_ial_pr_example.toml  atos_bologna_operational.toml  atos_bologna_tasks.toml  case_definitions.toml  ial_pr_atos_bologna.toml  ial_pr_large_atos_bologna.toml  ial_pr_large_lumi.toml  lumi.toml  lumi_large.toml  lumi_operational.toml  macros.toml  modifs_atos_bologna.toml  modifs_atos_bologna_operational.toml  modifs_lumi.toml  modifs_lumi_operational.toml  task_definitions.toml
tests/unit/: test_ttr.py
ttr/: ttr.py
ttr/src/: __init__.py  ttr.py
